Deployment Protection deaktiviert - Authentifizierungsschutz entfernt

--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,9 @@
       "use": "@vercel/static"
     }
   ],
+  "deploymentProtection": {
+    "enabled": false
+  },
   "headers": [
     {
       "source": "/js/(.*)",
